2021. 4.29. Reflected new specification of zeda-config-gen. [app]
2021. 3.31. Modified makefile to separately make and install library and applications. [makefile]
2019.11.22. Rewrote README as a markdown file. [README]
2019.10. 1. Enabled make uninstall. [makefile]
2019. 8. 8. Reflected renaming of zNameDestroy to zNameFree. [liw_dl]
2019. 6.18. Corrected makefile to check dependency (thanks to Naoki Wakisaka). [makefile]
2019. 6.13. Registered lib and some dot files for Git. [lib]
2018.12.12. Followed renaming of CURE to ZEDA. [all]
2018.11.16. Reflected removal of ZSYSERROR. [liw_ipc, liw_socket]
2018. 7. 9. Debugd liw_time. (by Naoki Wakisaka) [liw_time]
2015. 2. 9. Applied cure-config-gen. [app]
2015. 1. 7. Added liw-config. [app]
2015. 1. 6. Modified the type of id in liwPActionRT. [liw_paction]
2012. 2.27. Added liwSleep. [liw_timer]
2012. 2.27. Reimplemented liwPAction and liwPActionRT. [liw_paction]
2013. 2.27. ver.0.6.0. Refactored.
2009. 9. 1. Updated. [liw_debug, liw_lock, liw_fifo, liw_ipc, liw_time, liw_coproc]
2007.11.15. Updated. [liw_socket]
2007. 7. 3. Updated. [liw_dl]
2006. 8.21. Created liw_module. [liw_module]
2004.12.24. Created liw_time. [liw_time]
2004. 3. 6. Created liw_paction. [liw_paction]
2003.12.23. Created liw_coproc. [liw_coproc]
2002. 8.30. Created liw_dl. [liw_dl]
2002. 8.24. Created liw_debug. [liw_debug]
2002. 1. 8. Created liw_lock. [liw_lock]
2001. 5.25. Created liw_socket. [liw_socket]
2000. 7.29. Created liw_ipc. [liw_ipc]
2000. 6.15. Created liw_fifo. [liw_fifo]