@@ -1,6 +1,6 @@
 PREFIX=$(HOME)/usr
 PROJNAME=liw
-VERSION=1.2.0
+VERSION=1.2.1
 
 DEPENDENCY="zeda=1.5.0"
 
